# tg

FinancialInventorySync/: .env  .env.example  .replit  README.md  bot_database.db  config.py  database.py  main.py  number_extractor.py  pyproject.toml  telegram_bot.py  tts_config.py  twilio_client.py  webhook_server.py
FinancialInventorySync/audio_files/: .gitkeep
