[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask==2.3.3",
    "pydub==0.25.1",
    "python-dotenv==1.0.0",
    "python-telegram-bot==20.7",
    "requests==2.31.0",
    "telegram>=0.0.1",
    "twilio==8.10.0",
    "word2number==1.1",
]
